# agent-shield

./: .gitignore  Cargo.toml  Dockerfile  README.md
apps/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  main.tsx  styles.css
apps/dashboard/src/components/: BodyViewer.tsx  DetailPane.tsx  StatCard.tsx  TrafficTable.tsx
apps/dashboard/src/lib/: api.ts  types.ts
certs/: mitmproxy-ca-cert.pem
examples/fastapi/: handler.py  listener.py
scripts/: ash.sh  build-diagram-pngs.sh  build-readme-demo-gif.sh  dashboard-demo-screenshots.mjs  dashboard-listener-demo-screenshots.mjs  init.sh  screenshot-redaction.mjs  with-proxy-env.sh
services/dashboard-listener/: Dockerfile  app.py  requirements.txt
services/dashboard-listener/dashboard_listener/: demo.py  main.py  models.py  store.py  views.py
services/dashboard-listener/dashboard_listener/static/: app.css  app.js
services/dashboard-listener/dashboard_listener/templates/: _detail.html  _filters.html  _stats.html  _traffic.html  index.html
src/: app.rs  bus.rs  ca.rs  config.rs  dashboard.html  dashboard.rs  dashboard_app.rs  dashboard_runtime.rs  decision.rs  embedded_dashboard.rs  events.rs  lib.rs  main.rs  proxy.rs  runtime.rs  scanner.rs  server.rs  state.rs  store.rs  streaming.rs
src/bus/: decision.rs  subscriber.rs
src/orchestrator/: adapters.rs  classifier.rs  http_callbacks.rs  merger.rs  mod.rs  planner.rs  service.rs
src/proxy/: connect.rs  http.rs  request.rs  response.rs  upgrade.rs  upstream.rs
